✨feat: 비디오 검색 및 상세 조회 기능 개선, 에러 코드 및 유틸리티 클래스 추가